--- a/Cafeine/Views/Resources/CafeineTemplateDesign.xaml
+++ b/Cafeine/Views/Resources/CafeineTemplateDesign.xaml
@@ -54,6 +54,7 @@
                 Margin="2,2,2,0"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top"
+                x:Phase="2"
                 ImageOpened="CoverImage_ImageOpened"
                 Opacity="0"
                 RelativePanel.AlignLeftWithPanel="True"
@@ -80,6 +81,7 @@
                 x:Name="thetitle"
                 Grid.Row="1"
                 Margin="8,4,8,0"
+                x:Phase="1"
                 CharacterSpacing="14"
                 FontSize="14"
                 FontWeight="SemiBold"
@@ -206,6 +208,7 @@
                 MaxWidth="140"
                 MaxHeight="194"
                 Margin="2,2,8,2"
+                x:Phase="3"
                 ImageOpened="CoverImage_ImageOpened"
                 Opacity="0"
                 Source="{x:Bind Item.GetItemCoverAsync()}"
@@ -228,6 +231,7 @@
             <TextBlock
                 Grid.Column="1"
                 Padding="0,4,4,0"
+                x:Phase="1"
                 CharacterSpacing="14"
                 FontSize="14"
                 FontWeight="SemiBold"
@@ -239,6 +243,7 @@
                 Grid.Row="1"
                 Grid.Column="1"
                 Padding="0,0,4,0"
+                x:Phase="2"
                 FontSize="12"
                 MaxLines="7"
                 Opacity="0.8"
